--- a/Library_System/src/main/java/com/alejandro/library_system/FrmMenu.form
+++ b/Library_System/src/main/java/com/alejandro/library_system/FrmMenu.form
@@ -71,15 +71,22 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnVentas" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                      <Component id="btnLector" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                      <Component id="btnEditoriales" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                      <Component id="btnPrestamo" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                      <Component id="btnClientes" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                      <Component id="btnCompra" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                      <Component id="btnAgregarLibro" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="btnPrestamo" min="-2" pref="186" max="-2" attributes="0"/>
+                          <EmptySpace pref="554" max="32767" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="btnAgregarLibro" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                              <Component id="btnVentas" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                              <Component id="btnLector" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                              <Component id="btnEditoriales" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                              <Component id="btnClientes" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                              <Component id="btnCompra" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="32767" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace pref="554" max="32767" attributes="0"/>
               </Group>
               <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
           </Group>
